Changed col-build functions to break instead of break-contain to fix issue with responsive grids

--- a/examples/styles/scss/styles.scss
+++ b/examples/styles/scss/styles.scss
@@ -6,11 +6,25 @@
 //Column Number is used to determine to total amount of columns you desire to generate
 $col-number: 4;
 
-@include col-build(desk,$col-number);
-@include col-build(tablet,$col-number);
-@include col-build(v-tablet,$col-number);
-@include col-build(mobile,$col-number);
-@include col-build(v-mobile,$col-number);
+@include break(desk) {
+    @include col-build(desk,$col-number);
+}
+
+@include break(tablet) {
+    @include col-build(tablet,$col-number);
+}
+
+@include break(v-tablet) {
+    @include col-build(v-tablet,$col-number);
+}
+
+@include break(mobile) {
+    @include col-build(mobile,$col-number);
+}
+
+@include break(v-mobile) {
+    @include col-build(v-mobile,$col-number);
+}
 
 body {
   padding: 50px 0;
